interface Curavel {
    void curar(int quantidade);
}
