package interfaces;

public interface Combatente {
    void atacar(String alvo);
    void usarHabilidadeEspecial();
    String getStatus();
}
